Release history for Dist-Zilla-Plugin-Readme-Brief

{{$NEXT}}
 [Documentation]
 - More spelling/punctuation mistakes. (ether++, #1)

0.001001 2015-01-05T09:53:04Z f6de193
 - Spelling mistake (aristotle++)

0.001000 2015-01-05T09:44:06Z 7628164
 - First version.
