@@ -83,7 +83,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.022003
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.022004
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -160,7 +160,6 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
-; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
