@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001002
+0.002000
 
 0.001001 2015-01-05T09:53:04Z
 
