@@ -10,6 +10,9 @@
 [Generic / DESCRIPTION]
 [Generic / OVERVIEW]
 
+[Generic / NOTE]
+[Generic / MECHANICS]
+
 ;[Generic / METHODS]
 ;[Collect / METHODS]
 [Collect / METHODS]
