@@ -1,8 +1,16 @@
 Release history for Dist-Zilla-Plugin-Readme-Brief
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001001, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
+ - runtime: +3
+
  [Documentation]
  - More spelling/punctuation mistakes. (ether++, #1)
+
+ [Features]
+ - Now have `installer` parameter which allows you to force which(plural) installers to document.
 
 0.001001 2015-01-05T09:53:04Z f6de193
  - Spelling mistake (aristotle++)
